--- a/themes/qs/A11QSUI/res/values/dimens.xml
+++ b/themes/qs/A11QSUI/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- A11 QS style -->
-    <dimen name="custom_qs_panel_padding_top">20dp</dimen>
+    <dimen name="custom_qs_panel_padding_top">145dp</dimen>
     <dimen name="custom_notification_row_padding">0dp</dimen>
     <dimen name="qs_tile_height">96dp</dimen>
     <dimen name="qs_tile_margin_horizontal">22dp</dimen>
@@ -12,6 +12,7 @@
     <dimen name="qs_tile_padding">18dp</dimen>
     <dimen name="qs_tile_text_size">12sp</dimen>
     <dimen name="qqs_layout_padding_bottom">6dp</dimen>
+    <dimen name="qqs_layout_padding_top">20dp</dimen>
     
     <!-- QQS Brightness slider -->
     <dimen name="qqs_top_brightness_margin_top">-10dp</dimen>
